Add Basket Integration Test Refactoring & Fixing WebApi and BasketApiClient

--- a/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
+++ b/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BasketApi.Models\BasketApi.Common.csproj" />
+    <ProjectReference Include="..\BasketApp.Common\BasketApp.Common.csproj" />
   </ItemGroup>
 
 </Project>
