--- a/BasketAppPrototype/BasketApp.Common/BasketApp.Common.csproj
+++ b/BasketAppPrototype/BasketApp.Common/BasketApp.Common.csproj
@@ -9,7 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BasketApp.Common\BasketApp.Common.csproj" />
+    <Reference Include="Microsoft.Extensions.Identity.Core">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.identity.core\2.2.0\lib\netstandard2.0\Microsoft.Extensions.Identity.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
-
 </Project>
