--- a/BasketAppPrototype/BasketApp.IntegrationTests/BasketApp.IntegrationTests.csproj
+++ b/BasketAppPrototype/BasketApp.IntegrationTests/BasketApp.IntegrationTests.csproj
@@ -7,9 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BasketApp.Api\BasketApp.Api.csproj" />
+    <ProjectReference Include="..\BasketApp.Client\BasketApp.Client.csproj" />
+    <ProjectReference Include="..\BasketApp.Common\BasketApp.Common.csproj" />
   </ItemGroup>
 
 </Project>
