--- a/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
+++ b/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
@@ -11,6 +11,12 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.2" PrivateAssets="All" />
+
+    <PackageReference Include="Serilog" Version="2.6.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.RollingFile " Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
