--- a/BasketAppPrototype/BasketApp.Api/appsettings.json
+++ b/BasketAppPrototype/BasketApp.Api/appsettings.json
@@ -10,5 +10,20 @@
       "Default": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "C:\\BasketApi\\Logs\\log-{Date}.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "Common feature in WebApi demo"
+    }
+  }, 
   "AllowedHosts": "*"
 }
