--- a/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
+++ b/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
@@ -9,8 +9,6 @@
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.3" PrivateAssets="All" />
 
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
@@ -21,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BasketApp.Common\BasketApp.Common.csproj" />
+    <ProjectReference Include="..\BasketApp.DAL\BasketApp.DAL.csproj" />
   </ItemGroup>
 
 </Project>
