--- a/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
+++ b/BasketAppPrototype/BasketApp.Api/BasketApp.Api.csproj
@@ -8,8 +8,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="2.2.0" /> 
     <PackageReference Include="Microsoft.AspNetCore.App" />
-
     <PackageReference Include="Serilog" Version="2.8.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
